--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server ./db.json --port 4000"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "json-server": "^0.17.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.9"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7"
   }
 }
